feat(chore): added qodana analysis job